color subheading change

--- a/src/index.css
+++ b/src/index.css
@@ -224,6 +224,10 @@ a, a:hover {
   margin-top: 25px;
 }
 
+.hero p {
+  color: black;
+}
+
 .not-found {
   display: flex;
   flex-direction: column;
