--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,8 @@ a, a:hover {
   background-color: whitesmoke;
   color: black;
   padding: 15px 4px;
-  border-radius: 3px;
+  border-top-left-radius: 55px;
+  border-bottom-left-radius: 55px;
 }
 
 .creator h3 {
