--- a/src/index.css
+++ b/src/index.css
@@ -198,7 +198,7 @@ a, a:hover {
   text-align: center;
   gap: 0.75rem;
   color: white;
-  background-image: url("src/assets/hero2.jpg");
+  background-image: url("src/assets/hero.jpg");
   background-size: cover;
 }
 
@@ -210,7 +210,6 @@ a, a:hover {
 .hero p {
   font-size: 1.25rem;
   margin: 0;
-  color: black;
 }
 
 .loading-card {
