--- a/src/index.css
+++ b/src/index.css
@@ -212,6 +212,10 @@ a, a:hover {
   margin: 0;
 }
 
+.hero-subtitle {
+  color: #f5f5f4 !important
+}
+
 .loading-card {
   height: 12rem;            
   width: 100%;
